# papo-comtxae

./: .clinerules  .gitignore  README.md  index.html  install_dependencies.py  next-restart.ps1  next-restart.sh  package-lock.json  package.json  requirements.txt  restart-dev.sh  run-diagnostics.bat  setup.py  tailwind.config.js
.github/ISSUE_TEMPLATE/: doc_access.md
.github/workflows/: docs.yml
docs/: CODE_STANDARDS.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  _sidebar.md  component-consolidation.md  index.html  introduction.md  mongodb_reference.md  setup.md  troubleshooting-plan.md
docs/analysis/: PAPO_SOCIAL_ONTOLOGIA.md  STRUCTURE_ANALYSIS.md
docs/architecture/: OVERVIEW.md  TECH_STACK.md  project-structure.md
docs/audit/: DOCUMENTATION_COVERAGE.md  DOCUMENTATION_SUMMARY.md
docs/business_context/: PapoSocial_description.md  UserJourney_3personas.md  beliefs_matrix.md  beliefs_structure.md  business_matrix.md  businessmodel.md  challenges_matrix.md  monetization_matrix.md  paponews.md  socialbelief_matrix.md
public/: test.html
src/: check-project.ps1
src/backend/: README.md  main.py  pyproject.toml  requirements.txt  run_server.py  run_tests.py
src/backend/config/: database.py
src/backend/models/: __init__.py  bson_types.py  check_versions.py  request.py  resident.py  user.py
src/backend/routes/: __init__.py  user_routes.py
src/backend/services/: __init__.py
src/backend/tests/: conftest.py
src/backend/tests/integration/: test_api.py
src/backend/tests/unit/: test_config.py  test_models.py
src/backend/utils/: __init__.py
(+277 files in other folders)
